# RusticAI

./: Cargo.toml  README.md
src/: client.rs  lib.rs  methods.rs  requester.rs  types.rs
src/types/: character.rs  chat.rs  enums.rs  media.rs  user.rs
