[package]
name = "rustic_ai"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
futures-util = "0.3.31"
http = "1.3.1"
reqwest = "0.12.15"
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "*", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = "0.26.2"
