[package]
name = "rustic_ai"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3.6"
async-trait = "0.1.88"
base64 = "0.22.1"
futures-util = "0.3.31"
http = "1.3.1"
rand = "0.9.1"
reqwest = "0.12.15"
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "*", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = "0.26.2"
urlencoding = "2.1.3"

[dependencies.uuid]
version = "1.16.0"
features = [ "v4" ]
